Fire rush takes more time to activate
Former-commit-id: 262cd807657ba473f8cfd8801f8cfe2a0f74fe7e

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ ProjectSettings/UnityAnalyticsManager.asset
 ProjectSettings/ProjectVersion.txt
 
 HungryDragonAPK.apk
+Assets/Resources/Game/Assets/Ground/Ground_01.meta
