--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ ProjectSettings/ProjectVersion.txt
 
 HungryDragonAPK.apk
 Assets/Resources/Game/Assets/Ground/Ground_01.meta
+SettingsTexturePackerImporter.asset.meta
