ignore xcode folder
Former-commit-id: 1610b6c2d05c2e255b916a654d69f5213f809d2e

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ ProjectSettings/ProjectVersion.txt
 HungryDragonAPK.apk
 Assets/Resources/Game/Assets/Ground/Ground_01.meta
 SettingsTexturePackerImporter.asset.meta
+xcode
