improved calety bat initialiser
Former-commit-id: 772bfbc21d402902c0f0cc7ab765f295b06bcd4e

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ HungryDragonAPK.apk
 Assets/Resources/Game/Assets/Ground/Ground_01.meta
 SettingsTexturePackerImporter.asset.meta
 xcode
+
+# Calety
+Assets/Calety
+Assets/Calety.meta
+Assets/Editor/Calety
+Assets/Editor/Calety.meta
+Assets/CaletyExternalPlugins
+Assets/CaletyExternalPlugins.meta
