--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,25 +1,90 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.unity3d.player" android:installLocation="preferExternal" android:versionCode="1" android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ubisoft.hungrydragon.dev" android:installLocation="preferExternal" android:versionCode="1" android:versionName="1.0">
+  <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="23" />
+  <uses-feature android:glEsVersion="0x00020000" />
   <supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true" android:anyDensity="true" />
-  <application android:theme="@style/UnityThemeSelector" android:icon="@drawable/app_icon" android:label="@string/app_name" android:debuggable="true">
-    <activity android:name="com.unity3d.player.UnityPlayerActivity" android:label="@string/app_name">
+  <application android:label="@string/app_name" android:icon="@drawable/app_icon" android:theme="@style/MyTheme" android:hasCode="true" android:allowBackup="false" android:debuggable="false">
+    <activity android:name="org.calety.CoreLib.Common.CyUnityActivity" android:label="@string/app_name" android:uiOptions="none" android:configChanges="orientation|keyboardHidden|screenSize" android:screenOrientation="fullSensor" android:launchMode="singleTask">
+      <meta-data android:name="android.app.lib_name" android:value="unity" />
+      <meta-data android:name="unityplayer.ForwardNativeEventsToDalvik" android:value="true" />
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
-      <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
     </activity>
+    <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="\ 123456" />
+    <meta-data android:name="com.google.android.gms.appstate.APP_ID" android:value="\ 123456" />
+    <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+    <!-- Push/Local notifications -->
+    <receiver android:name="org.calety.GameLib.Notifications.CyNotificationReceiver" android:enabled="true">
+      <intent-filter>
+        <action android:name="com.ubisoft.hungrydragon.dev.intent.action.PUSH_NOTIFICATION" />
+        <action android:name="com.ubisoft.hungrydragon.dev.intent.action.LOCAL_NOTIFICATION" />
+        <action android:name="com.ubisoft.hungrydragon.dev.intent.action.PRESSED_NOTIFICATION" />
+        <action android:name="com.ubisoft.hungrydragon.dev.intent.action.DELETE_NOTIFICATION" />
+      </intent-filter>
+    </receiver>
+    <service android:name="org.calety.GameLib.Notifications.CyNotificationReceiverService" />
+    <!-- GCM Push notifications -->
+    <service android:name="org.calety.GameLib.Notifications.CyGcmListenerService" android:exported="false">
+      <intent-filter>
+        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+      </intent-filter>
+    </service>
+    <!-- GCM Push notifications -->
+    <receiver android:name="com.google.android.gms.gcm.GcmReceiver" android:exported="true" android:permission="com.google.android.c2dm.permission.SEND">
+      <intent-filter>
+        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+        <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+        <category android:name="com.ubisoft.hungrydragon.dev" />
+      </intent-filter>
+    </receiver>
+    <activity android:name="org.calety.CoreLib.Utils.CyAlertDialog" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:label="@string/app_name" />
+    <activity android:name="org.calety.SocialLib.Twitter.CyTwitterWebviewActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="callback" />
+      </intent-filter>
+    </activity>
+    <activity android:name="com.jirbo.adcolony.AdColonyOverlay" android:configChanges="keyboardHidden|orientation|screenSize" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+    <activity android:name="com.jirbo.adcolony.AdColonyFullscreen" android:configChanges="keyboardHidden|orientation|screenSize" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
+    <activity android:name="com.jirbo.adcolony.AdColonyBrowser" android:configChanges="keyboardHidden|orientation|screenSize" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
+    <activity android:name="com.applovin.adview.AppLovinInterstitialActivity" />
+    <activity android:name="com.applovin.adview.AppLovinConfirmationActivity" />
+    <activity android:name="com.chartboost.sdk.CBImpressionActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:excludeFromRecents="true" />
     <activity android:name="com.facebook.unity.FBUnityLoginActivity" android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
     <activity android:name="com.facebook.unity.FBUnityDialogsActivity" android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
-    <activity android:name="com.facebook.LoginActivity" android:configChanges="keyboardHidden|orientation" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
     <activity android:name="com.facebook.unity.FBUnityAppLinkActivity" android:exported="true" />
     <activity android:name="com.facebook.unity.FBUnityDeepLinkingActivity" android:exported="true" />
     <activity android:name="com.facebook.unity.FBUnityGameRequestActivity" />
     <activity android:name="com.facebook.unity.FBUnityCreateGameGroupActivity" />
     <activity android:name="com.facebook.unity.FBUnityJoinGameGroupActivity" />
     <activity android:name="com.facebook.unity.AppInviteDialogActivity" />
-    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="fb881044652011896" />
-    <provider android:name="com.facebook.FacebookContentProvider" android:authorities="com.facebook.app.FacebookContentProvider881044652011896" android:exported="true" />
-    <activity android:name="com.facebook.FacebookActivity" android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="fb123456" />
+    <provider android:name="com.facebook.FacebookContentProvider" android:authorities="com.facebook.app.FacebookContentProvider123456" android:exported="true" />
   </application>
+  <!-- Needed by AdColony and Flurry -->
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <!-- Needed by Twitter -->
+  <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+  <!-- Needed for showing Ads -->
+  <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
+  <!-- Used for opening network sockets -->
+  <uses-permission android:name="android.permission.INTERNET" />
+  <!-- Needed by AdColony -->
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <!-- Needed for push notifications -->
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
+  <!-- Needed by AdColony -->
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <!-- Needed for device vibration -->
+  <uses-permission android:name="android.permission.VIBRATE" />
+  <uses-permission android:name="com.android.vending.BILLING" />
+  <!-- App receives GCM messages. -->
+  <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+  <!-- Creates a custom permission so only this app can receive its messages. -->
+  <permission android:name="com.ubisoft.hungrydragon.dev.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+  <uses-permission android:name="com.ubisoft.hungrydragon.dev.permission.C2D_MESSAGE" />
 </manifest>
