right calety branch
Former-commit-id: dae176d8be5d56177b2e1b856dc78345e8f8acf8

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "Calety"]
 	path = Calety
 	url = git@bcn-mb-git.ubisoft.org:tools/calety.git
-	branch = caletyMezclum
+	branch = hungrydragon
