--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ubisoft.hungrydragon.dev" android:installLocation="preferExternal" android:versionCode="1" android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ubisoft.hungrydragon.dev" android:installLocation="auto" android:versionCode="1" android:versionName="1.0">
   <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="23" />
   <uses-feature android:glEsVersion="0x00020000" />
   <supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true" android:anyDensity="true" />
   <application android:label="@string/app_name" android:icon="@drawable/app_icon" android:theme="@style/MyTheme" android:hasCode="true" android:allowBackup="false" android:debuggable="false">
-    <activity android:name="org.calety.CoreLib.Common.CyUnityActivity" android:label="@string/app_name" android:uiOptions="none" android:configChanges="orientation|keyboardHidden|screenSize" android:screenOrientation="fullSensor" android:launchMode="singleTask">
+    <activity android:name="org.calety.CoreLib.Common.CyUnityActivity" android:label="@string/app_name" android:uiOptions="none" android:configChanges="orientation|keyboardHidden|screenSize" android:screenOrientation="sensorLandscape" android:launchMode="singleTask">
       <meta-data android:name="android.app.lib_name" android:value="unity" />
       <meta-data android:name="unityplayer.ForwardNativeEventsToDalvik" android:value="true" />
       <intent-filter>
@@ -40,14 +40,19 @@
       </intent-filter>
     </receiver>
     <activity android:name="org.calety.CoreLib.Utils.CyAlertDialog" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:label="@string/app_name" />
-    <activity android:name="org.calety.SocialLib.Twitter.CyTwitterWebviewActivity">
+    <!--activity android:name="org.calety.SocialLib.Twitter.CyTwitterWebviewActivity">
+      		<intent-filter>
+  	    		<action android:name="android.intent.action.VIEW" />
+        		<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+        		<data android:scheme="callback" />
+      		</intent-filter>
+    	</activity-->
+    <receiver android:name="com.tune.TuneTracker" android:exported="true">
       <intent-filter>
-        <action android:name="android.intent.action.VIEW" />
-        <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE" />
-        <data android:scheme="callback" />
+        <action android:name="com.android.vending.INSTALL_REFERRER" />
       </intent-filter>
-    </activity>
+    </receiver>
     <activity android:name="com.jirbo.adcolony.AdColonyOverlay" android:configChanges="keyboardHidden|orientation|screenSize" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
     <activity android:name="com.jirbo.adcolony.AdColonyFullscreen" android:configChanges="keyboardHidden|orientation|screenSize" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
     <activity android:name="com.jirbo.adcolony.AdColonyBrowser" android:configChanges="keyboardHidden|orientation|screenSize" android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
@@ -62,8 +67,8 @@
     <activity android:name="com.facebook.unity.FBUnityCreateGameGroupActivity" />
     <activity android:name="com.facebook.unity.FBUnityJoinGameGroupActivity" />
     <activity android:name="com.facebook.unity.AppInviteDialogActivity" />
-    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="fb123456" />
-    <provider android:name="com.facebook.FacebookContentProvider" android:authorities="com.facebook.app.FacebookContentProvider123456" android:exported="true" />
+    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="fb881044652011896" />
+    <provider android:name="com.facebook.FacebookContentProvider" android:authorities="com.facebook.app.FacebookContentProvider881044652011896" android:exported="true" />
   </application>
   <!-- Needed by AdColony and Flurry -->
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
