--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -70,22 +70,13 @@
     <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="fb881044652011896" />
     <provider android:name="com.facebook.FacebookContentProvider" android:authorities="com.facebook.app.FacebookContentProvider881044652011896" android:exported="true" />
   </application>
-  <!-- Needed by AdColony and Flurry -->
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <!-- Needed by Twitter -->
-  <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-  <!-- Needed for showing Ads -->
-  <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
-  <!-- Used for opening network sockets -->
-  <uses-permission android:name="android.permission.INTERNET" />
-  <!-- Needed by AdColony -->
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-  <!-- Needed for push notifications -->
+  <!-- Normal permissions -->
   <uses-permission android:name="android.permission.WAKE_LOCK" />
-  <!-- Needed by AdColony -->
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <!-- Dangerous permissions -->
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-  <!-- Needed for device vibration -->
-  <uses-permission android:name="android.permission.VIBRATE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="com.android.vending.BILLING" />
   <!-- App receives GCM messages. -->
   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
