--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ubisoft.hungrydragon.dev" android:installLocation="auto" android:versionCode="1" android:versionName="1.0">
-  <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="23" />
+  <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="24" />
   <uses-feature android:glEsVersion="0x00020000" />
   <supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true" android:anyDensity="true" />
   <application android:label="@string/app_name" android:icon="@drawable/app_icon" android:theme="@style/MyTheme" android:hasCode="true" android:allowBackup="false" android:debuggable="false">
@@ -12,8 +12,9 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="\ 123456" />
-    <meta-data android:name="com.google.android.gms.appstate.APP_ID" android:value="\ 123456" />
+    <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="\ " />
+    <meta-data android:name="com.google.android.gms.appstate.APP_ID" android:value="\ " />
+    <meta-data android:name="com.calety.GameLib.SERVER_CLIENT_ID" android:value="\ " />
     <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
     <!-- Push/Local notifications -->
     <receiver android:name="org.calety.GameLib.Notifications.CyNotificationReceiver" android:enabled="true">
